# deepflow

./: .gitignore  404.html  CNAME  index.html  mkdocs.yml  optuna_burgers1d_v1.db  optuna_burgers1d_v2.db  optuna_burgers1d_v3.db  optuna_burgers1d_v4.db  optuna_burgers1d_v5.db  pyproject.toml  readme.md  test.ipynb
EXPERIMENT/: channel_flow_steady.ipynb  outlet_velocity_profile.txt  test deepxde.py
EXPERIMENT cavity/: channel_flow_steady.ipynb  model2.pkl  outlet_velocity_profile.txt
EXPERIMENT copy/: channel_flow_steady.ipynb  outlet_velocity_profile.txt
EXPERIMENT/DeepXDE benchmark/: test deepxde.py
EXPERIMENT/channel_flow/: channel_flow_steady.ipynb
EXPERIMENT/cylinder_flow/: channel_flow_steady.ipynb
burgers_eq/: index.html
cavity_flow/: index.html
cylinder_flow/: index.html
docs/: burgers_eq.md  cavity_flow.md  channel_flow_transient.md  cylinder_flow.md  examples.md  heat_eq.md  index.md  reference.md
examples/: index.html
examples/burgers_eq/: burgers_eq.ipynb
examples/cavity_flow/: channel_flow_steady.ipynb  outlet_velocity_profile.txt
examples/cylinder_flow/: channel_flow.py  channel_flow_steady.ipynb  cylinder_flow.ipynb  model.pkl  outlet_velocity.txt
examples/cylinder_flow_steady/: cylinder_flow_steady.ipynb
heat_eq/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
src/: geometry.py  physicsinformed.py
src/deepflow/: Geometry.py  Network.py  PINNmethod.py  Physics.py  PhysicsInformedAttach.py  Utility.py  Visualize.py  domain.py  evaluation.py  (+5 more)
src/deepflow.egg-info/: SOURCES.txt
(+1 files in other folders)
