[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepflow"
version = "0.1.2"
description = "Physics-Informed Neural Networks for Fluid Dynamics"
authors = [{ name = "Thammatorn Jamraschai", email = "thammatorn.j@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["PINNs", "neural-networks", "fluid-dynamics", "PDEs", "physics-informed", "deep-learning", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]
urls = {Homepage = "https://github.com/YoYo-XYZ/deepflow"}
dependencies = [
    "torch>=1.7.0",
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "sympy>=1.5.0",
    "ultraplot>=1.0.0",
    "scipy>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]